apps/artskorner-api/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artskorner-api
spec:
  selector:
    matchLabels:
      app: artskorner-api
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-image-pull-secrets
      containers:
        - name: artskorner-api
