apps/artskorner-api/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artskorner-api-ingress # This must match the name of the Ingress in the base
  namespace: prod
spec:
  rules:
  - host: test-artskorner.gramnuri.com # Temporarily use gramnuri.com before domain purchase
    http:
      paths:
      - path: / # You need to repeat the paths here for the merge to work correctly
        pathType: Prefix
        backend:
          service:
            name: artskorner-api
            port:
              number: 80
